--- a/.github/workflows/test_install.yml
+++ b/.github/workflows/test_install.yml
@@ -77,5 +77,7 @@ jobs:
       shell: pwsh
       run: ./installers/install.ps1
       if: contains(matrix.os, 'windows')
+    - run: env
+      shell: pwsh
     - name: Check that `fly` is in PATH and is executable
       run: flyctl version
