--- a/.github/workflows/test_install.yml
+++ b/.github/workflows/test_install.yml
@@ -78,6 +78,7 @@ jobs:
       run: |
         ./installers/install.ps1
         $env:PATH -split ':' | Select-Object -Last 1 | Out-File -FilePath $env:GITHUB_PATH -Append
+        env
       if: contains(matrix.os, 'windows')
     - run: env
       shell: powershell
