--- a/.github/workflows/test_install.yml
+++ b/.github/workflows/test_install.yml
@@ -83,7 +83,7 @@ jobs:
     - run: env
       shell: powershell
       if: contains(matrix.os, 'windows')
-    - run: ls /d/Users/runneradmin/.fly/bin
+    - run: ls /c/Users/runneradmin/.fly/bin
       shell: powershell
       if: contains(matrix.os, 'windows')
     - name: Check that `fly` is in PATH and is executable
