--- a/.github/workflows/test_install.yml
+++ b/.github/workflows/test_install.yml
@@ -87,4 +87,4 @@ jobs:
       shell: powershell
       if: contains(matrix.os, 'windows')
     - name: Check that `fly` is in PATH and is executable
-      run: /d/Users/runneradmin/.fly/bin/flyctl.exe version
+      run: /c/Users/runneradmin/.fly/bin/flyctl.exe version
