--- a/.github/workflows/test_install.yml
+++ b/.github/workflows/test_install.yml
@@ -88,4 +88,4 @@ jobs:
       if: contains(matrix.os, 'windows')
     - name: Check that `fly` is in PATH and is executable
       shell: powershell
-      run: C:\Users\runneradmin\.fly\bin\flyctl.exe version
+      run: flyctl.exe version
