--- a/.github/workflows/test_install.yml
+++ b/.github/workflows/test_install.yml
@@ -107,7 +107,7 @@ jobs:
           - "windows-latest"
     runs-on: ${{ matrix.os }}
     env:
-      FLYCTL_INSTALL: "${{ github.env.HOME }}\\flyctl"
+      FLYCTL_INSTALL: "C:\\flyctl"
     steps:
     - name: checkout
       uses: actions/checkout@v4
