--- a/.github/workflows/test_install.yml
+++ b/.github/workflows/test_install.yml
@@ -117,7 +117,7 @@ jobs:
         ./installers/install.ps1
     - name: Set Path
       run: |
-        echo "${FLYCTL_INSTALL}/.local/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+        echo "${FLYCTL_INSTALL}\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
     # - run: env
     #   shell: powershell
     # - run: ls C:\Users\runneradmin\.fly\bin
