--- a/.github/workflows/test_install.yml
+++ b/.github/workflows/test_install.yml
@@ -118,10 +118,10 @@ jobs:
     - name: Set Path
       run: |
         echo "${FLYCTL_INSTALL}\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-    # - run: env
-    #   shell: powershell
-    # - run: ls C:\Users\runneradmin\.fly\bin
-    #   shell: powershell
+    - run: env
+      shell: powershell
+    - run: ls $FLYCTL_INSTALL\bin
+      shell: powershell
     # # - run: env
     # #   shell: powershell
     - name: Check that `fly` is in PATH and is executable
