--- a/.github/workflows/test_install.yml
+++ b/.github/workflows/test_install.yml
@@ -61,9 +61,12 @@ jobs:
       max-parallel: 4
       matrix:
         os:
-          - "ubuntu-latest"
-          - "macos-latest"
-          # - "windows-latest"
+          - ubuntu-latest
+          - ubuntu-20.04
+          - macos-latest
+          - macos-11
+          - macos-13
+          # - windows-latest
     runs-on: ${{ matrix.os }}
     steps:
     - name: checkout
@@ -72,8 +75,10 @@ jobs:
       run: |
         echo "$HOME/.fly/bin" >> $GITHUB_PATH
         sh ./installers/install.sh
-    - name: Check that `fly` is in PATH and is executable
+    - name: Check that `flyctl` works
       run: flyctl version
+    - name: Check that `fly` works
+      run: fly version
 
 
   test-windows:
@@ -82,7 +87,8 @@ jobs:
       max-parallel: 4
       matrix:
         os:
-          - "windows-latest"
+          - windows-latest
+          - windows-2019
     runs-on: ${{ matrix.os }}
     env:
       FLYCTL_INSTALL: "C:\\flyctl"
@@ -100,6 +106,9 @@ jobs:
       shell: powershell
     - run: ls $env:FLYCTL_INSTALL\bin
       shell: powershell
-    - name: Check that `fly` is in PATH and is executable
+    - name: Check that `flyctl` works
       shell: powershell
       run: flyctl version
+    - name: Check that `fly` works
+      shell: powershell
+      run: fly version
