--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -93,4 +93,6 @@ jobs:
           name: build-artifacts
           path: ~/build-archive
       - name: Publish to flypkgs
+        env:
+          FLYPKGS_API_TOKEN: ${{ secrets.FLYPKGS_API_TOKEN }}
         run: go run ./tools/publish ~/build-archive
