--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -68,6 +68,8 @@ jobs:
           args: release --clean -f .goreleaser.2.yml --fail-fast --debug --skip-publish
         env:
           SNAPSHOT_NAME: ${{ needs.version.outputs.version }}
+      - name: Write git status
+        run: git status --branch --porcelain=v2 > ./dist/git-status.txt
 
       # - name: Build
       #   run: make build_macos_arm64
