--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,12 +27,16 @@ jobs:
           BUILD_ENV: "development"
         with:
           version: latest
-          args: build --clean --snapshot
+          args: build --clean --snapshot --verbose
       - name: Upload flyctl for preflight
         uses: actions/upload-artifact@v3
         with:
           name: flyctl
           path: dist/default_linux_amd64_v1/flyctl
+      - name: Upload flyctl for preflight
+        uses: actions/upload-artifact@v3
+        with:
+          path: dist
 
   preflight:
     needs: test_build
