--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,3 +1,6 @@
+env:
+  - BUILD_ENV={{if index .Env "BUILD_ENV"}}{{.Env.BUILD_ENV}}{{else}}production{{end}}
+
 before:
   hooks:
     - go mod download
@@ -16,10 +19,11 @@ builds:
       - goos: linux
         goarch: 386
     ldflags:
-      - -X github.com/superfly/flyctl/internal/buildinfo.environment=production
-      - -X github.com/superfly/flyctl/internal/buildinfo.buildDate={{ .Date }}
-      - -X github.com/superfly/flyctl/internal/buildinfo.version={{ .Version }}
-      - -X github.com/superfly/flyctl/internal/buildinfo.commit={{ .ShortCommit }}
+      - -X github.com/superfly/flyctl/internal/buildinfo.buildDate={{.CommitDate}}
+      - -X github.com/superfly/flyctl/internal/buildinfo.buildVersion={{.Version}}
+      - -X github.com/superfly/flyctl/internal/buildinfo.commit={{.ShortCommit}}
+    tags:
+      - "{{.Env.BUILD_ENV}}"
 
   - id: windows
     env:
@@ -30,10 +34,11 @@ builds:
       - goos: windows
         goarch: 386
     ldflags:
-      - -X github.com/superfly/flyctl/internal/buildinfo.environment=production
-      - -X github.com/superfly/flyctl/internal/buildinfo.buildDate={{ .Date }}
-      - -X github.com/superfly/flyctl/internal/buildinfo.version={{ .Version }}
-      - -X github.com/superfly/flyctl/internal/buildinfo.commit={{ .ShortCommit }}
+      - -X github.com/superfly/flyctl/internal/buildinfo.buildDate={{.CommitDate}}
+      - -X github.com/superfly/flyctl/internal/buildinfo.buildVersion={{.Version}}
+      - -X github.com/superfly/flyctl/internal/buildinfo.commit={{.ShortCommit}}
+    tags:
+      - "{{.Env.BUILD_ENV}}"
 
 archives:
   - id: windows
@@ -81,7 +86,7 @@ checksum:
   name_template: "checksums.txt"
 
 snapshot:
-  name_template: "{{incpatch .Version}}-snapshot.{{.Branch}}+{{.ShortCommit}}"
+  name_template: "{{.Version}}-{{.Branch}}.{{.CommitTimestamp}}"
 
 changelog:
   sort: asc
