--- a/.github/workflows/pkg.yml
+++ b/.github/workflows/pkg.yml
@@ -36,3 +36,31 @@ jobs:
         run: ./scripts/bump_version.sh
       - name: sanity check old script (pre)
         run: ./scripts/bump_version.sh prerel
+
+  build:
+    needs: version
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-go@v4
+        with:
+          go-version-file: "go.mod"
+          cache: true
+      - name: Place wintun.dll
+        run: cp -r deps/wintun/bin/amd64/wintun.dll ./
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v4
+        with:
+          version: latest
+          args: release --clean -f .goreleaser.2.yml --fail-fast --debug --skip-publish
+        env:
+          SNAPSHOT_NAME: ${{ needs.version.outputs.version }}
+      - name: Write git status
+        run: git status --branch --porcelain=v2 > ./dist/git-status.txt
+      - uses: actions/upload-artifact@v3
+        with:
+          name: build-artifacts
+          path: dist/*.*
+          retention-days: 1
