--- a/.github/workflows/pkg.yml
+++ b/.github/workflows/pkg.yml
@@ -49,45 +49,44 @@ jobs:
       - name: debug version output
         run: |
           echo ${{ needs.version.outputs.next_version }}
-      # - name: Create tag
-      #   uses: actions/github-script@v6
-      #   env:
-      #     TAG_NAME: v${{ fromJSON(needs.version.outputs.json).nextVersion }}
-      #   with:
-      #     script: |
-      #       const { TAG_NAME } = process.env
-      #       github.rest.git.createRef({
-      #         owner: context.repo.owner,
-      #         repo: context.repo.repo,
-      #         ref: `refs/tags/${TAG_NAME}`,
-      #         sha: context.sha
-      #       })
+      - name: Create tag
+        uses: actions/github-script@v6
+        env:
+          TAG_NAME: v${{ needs.version.outputs.next_version }}
+        with:
+          script: |
+            const { TAG_NAME } = process.env
+            github.rest.git.createRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: `refs/tags/${TAG_NAME}`,
+              sha: context.sha
+            })
 
-
-  # build:
-  #   needs: [tag, version]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #       with:
-  #         fetch-depth: 0
-  #     - uses: actions/setup-go@v4
-  #       with:
-  #         go-version-file: "go.mod"
-  #         cache: true
-  #     - name: Place wintun.dll
-  #       run: cp -r deps/wintun/bin/amd64/wintun.dll ./
-  #     - name: Run GoReleaser
-  #       uses: goreleaser/goreleaser-action@v4
-  #       with:
-  #         version: latest
-  #         args: release --clean -f .goreleaser.2.yml --fail-fast --debug --skip-publish
-  #       env:
-  #         SNAPSHOT_NAME: ${{ needs.version.outputs.version }}
-  #     - name: Write git status
-  #       run: git status --branch --porcelain=v2 > ./dist/git-status.txt
-  #     - uses: actions/upload-artifact@v3
-  #       with:
-  #         name: build-artifacts
-  #         path: dist/*.*
-  #         retention-days: 1
+  build:
+    needs: [tag, version]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-go@v4
+        with:
+          go-version-file: "go.mod"
+          cache: true
+      - name: Place wintun.dll
+        run: cp -r deps/wintun/bin/amd64/wintun.dll ./
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v4
+        with:
+          version: latest
+          args: release --clean -f .goreleaser.2.yml --fail-fast --debug --skip-publish
+        env:
+          SNAPSHOT_NAME: ${{ needs.version.outputs.next_version }}
+      - name: Write git status
+        run: git status --branch --porcelain=v2 > ./dist/git-status.txt
+      - uses: actions/upload-artifact@v3
+        with:
+          name: build-artifacts
+          path: dist/*.*
+          retention-days: 1
