--- a/.github/workflows/pkg.yml
+++ b/.github/workflows/pkg.yml
@@ -44,7 +44,7 @@ jobs:
 
   tag:
     runs-on: ubuntu-latest
-    needs: [version]
+    needs: [test, version]
     steps:
       - name: debug version output
         run: |
@@ -90,3 +90,21 @@ jobs:
           name: build-artifacts
           path: dist/*.*
           retention-days: 1
+
+  publish:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v4
+        with:
+          go-version-file: "go.mod"
+          cache: true
+      - uses: actions/download-artifact@v3
+        with:
+          name: build-artifacts
+          path: ~/build-archive
+      - name: Publish to flypkgs
+        env:
+          FLYPKGS_API_TOKEN: ${{ secrets.FLYPKGS_API_TOKEN }}
+        run: go run ./tools/publish ~/build-archive
