--- a/.github/workflows/pkg.yml
+++ b/.github/workflows/pkg.yml
@@ -107,4 +107,18 @@ jobs:
       - name: Upload to flypkgs
         env:
           FLYPKGS_API_TOKEN: ${{ secrets.FLYPKGS_API_TOKEN }}
-        run: go run ./tools/publish ~/build-archive
+        run: go run ./tools/distribute upload ~/build-archive
+
+  publish:
+    needs: [version, upload]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v4
+        with:
+          go-version-file: "go.mod"
+          cache: true
+      - name: Upload to flypkgs
+        env:
+          FLYPKGS_API_TOKEN: ${{ secrets.FLYPKGS_API_TOKEN }}
+        run: go run ./tools/distribute publish ${{ needs.version.outputs.next_version}}
