--- a/.github/workflows/pkg.yml
+++ b/.github/workflows/pkg.yml
@@ -4,6 +4,10 @@ on:
   push:
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: ${{ github.ref != 'refs/heads/master' }}
+    
 jobs:
   test:
     uses:
