--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -19,7 +19,8 @@ jobs:
     if: ${{ github.ref_type == 'branch' && github.ref_name != 'master' }}
     runs-on: ubuntu-latest
     outputs:
-      next_version: ${{ fromJSON(steps.version.outputs.json).nextVersion }}
+      version: ${{ fromJSON(steps.version.outputs.json).nextVersion }}
+      tag: v${{ fromJSON(steps.version.outputs.json).nextVersion }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -53,4 +54,12 @@ jobs:
               ref: `refs/tags/${TAG_NAME}`,
               sha: context.sha
             })
+
+  build_and_release:
+    uses:
+      ./.github/workflows/release.yml
+    needs: tag_version
+    with:
+      version: ${{ needs.tag_version.outputs.version }}
+      tag: ${{ needs.tag_version.outputs.tag }}
 
