--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -17,7 +17,7 @@ jobs:
   debug:
     runs-on: ubuntu-latest
     steps:
-      - run: echo ${{ toJSON(github) }} | jq
+      - run: echo "$GITHUB_CONTEXT"
 
   tag_version:
     needs: test
