--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,8 +86,8 @@ jobs:
         with:
           path: dist/windows
           key: windows-${{ env.sha_short }}
-      - name: Write git status
-        run: git status --branch --porcelain=v2 > ./dist/git-status.txt
+      - name: Write release meta
+        run: go run ./tools/version show > ./dist/release.json
       - run: find ./dist
       - uses: actions/upload-artifact@v3
         with:
